--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
@@ -102,7 +102,8 @@
 
     <script>
         window.Res = {
-            "Common.Notification": "@T("Common.Notification").ToString().EncodeJsString()",
+        	"Common.Notification": "@T("Common.Notification").ToString().EncodeJsString()",
+        	"Common.Close": "@T("Common.Close").ToString()",
         }
     </script>
     
