--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/Edit.cshtml
@@ -12,7 +12,7 @@
         <div class="options">
 			@Html.Widget("admin_button_toolbar_before")
 
-			<button type="submit" name="preview" value="preview" onclick="javascript:OpenWindow('@Url.RouteUrl("Category", new { SeName = Model.SeName })', 800, 600, true); return false;" class="btn">
+			<button type="submit" name="preview" value="preview" onclick="javascript:OpenPopup('@Url.RouteUrl("Category", new { SeName = Model.SeName })', true); return false;" class="btn">
 				<i class="fa fa-eye"></i>&nbsp;@T("Admin.Common.Preview")
 			</button>
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")</button>
