Resolves #1087 Wrong base price in product detail with bundle products

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.BundleItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.BundleItems.cshtml
@@ -160,6 +160,7 @@
 		$(document).on('change', '#@Html.FieldIdFor(model => model.BundlePerItemPricing)', function () {
 			var isChecked = $(this).is(':checked');
 			$('#TierPriceContainer').toggle(!isChecked);
+			$('#group-prices').find('.base-price').toggle(!isChecked);
 			$('a[href=#tab-discounts]').parent().toggle(!isChecked);
         });
 
