Product variant attributes: color can be specified with any list type attribute now

--- a/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/Color.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/Color.cshtml
@@ -14,7 +14,7 @@
 }
 
 @{
-    var color = "transparent";
+    var color = "";
     if (!string.IsNullOrEmpty(Value)) 
     {
         color = Value;
