--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.Variants.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.Variants.cshtml
@@ -8,15 +8,15 @@
 }
 
 <div class="art-variant-info">
-	@if (Model.ColorAttribute != null)
+	@if (Model.ColorAttributes != null && Model.ColorAttributes.Any())
 	{
 		<div class="art-color-opts">
-			@foreach (var clr in Model.ColorAttribute.Values)
+			@foreach (var clr in Model.ColorAttributes)
 			{
-				var qs = "?product_attribute_{0}_{1}_{2}_{3}={4}".FormatInvariant(Model.Id /* ProductId */, 0 /* BundleItemId */, Model.ColorAttribute.Id, clr.Id, clr.Id);
+				var qs = "?product_attribute_{0}_{1}_{2}_{3}={4}".FormatInvariant(Model.Id /* ProductId */, 0 /* BundleItemId */, clr.AttributeId, clr.Id, clr.Id);
 				@* TODO: (mc) Append attribute query to url *@
 				@* TODO: (mc) > (mg) WTF IS GOING ON HERE!??!!! *@
-				<a href='@(artDetailUrl + qs)' class="art-color-opt" style="background-color: @clr.Color" title='@T("Products.ChooseColorX", Model.ColorAttribute.Name, clr.FriendlyName)'></a>
+				<a href='@(artDetailUrl + qs)' class="art-color-opt" style="background-color: @clr.Color" title='@T("Products.ChooseColorX", clr.FriendlyName, clr.AttributeName)'></a>
 			}
 		</div>
 	}
