Theming: checkout attributes now use shared "Choice" model

--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -165,7 +165,7 @@
                     </p>
                     <p class="install-intro hide">@ILS.GetResource("Tooltip2")</p>
 
-                    <div id="messages" class="alert alert-error fade hide">
+                    <div id="messages" class="alert alert-danger fade hide">
                         <button type="button" class="close" data-dismiss="alert">×</button>
                         @Html.ValidationSummary(false)
                     </div>
