--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -76,7 +76,7 @@
                 @if (Model.Warnings.Count > 0)
                 {
 					<p>
-						<div class="alert alert-error">
+						<div class="alert alert-danger">
 							<ul>
 								@for (int i = 0; i < Model.Warnings.Count; i++)
                                 {
