--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
@@ -67,7 +67,7 @@
                 }
                 else
                 {
-                    <div class="alert alert-error">
+                    <div class="alert alert-danger">
                         <ul>
                             @for (int i = 0; i < Model.Warnings.Count; i++)
                             {
